<resources>
    <string name="app_name">MyDictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">English-Vietnamese</string>
    <string name="menu_en_en">English-English</string>
    <string name="menu_vi_en">Vietnamese-English</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_your_words">Your words</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>

    <string name="en_vi">ENG-VIE</string>
    <string name="search">Nhập vào từ để tra</string>
</resources>
