<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_en_en"
            android:icon="@drawable/ic_menu_en_en"
            android:title="@string/menu_en_en" />
        <item
            android:id="@+id/nav_vi_en"
            android:icon="@drawable/ic_menu_vi_en"
            android:title="@string/menu_vi_en" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_your_words"
            android:icon="@drawable/ic_menu_your_words"
            android:title="@string/menu_your_words" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help" />
        </menu>
    </item>

</menu>
