<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cndd.mydictionary.ui.en_vi.EnglishToVietnameseFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_en_en"
        android:name="com.cndd.mydictionary.ui.en_en.EnglishToEnglishFragment"
        android:label="@string/menu_en_en"
        tools:layout="@layout/fragment_en_en" />

    <fragment
        android:id="@+id/nav_vi_en"
        android:name="com.cndd.mydictionary.ui.vi_en.VietnameseToEnglishFragment"
        android:label="@string/menu_vi_en"
        tools:layout="@layout/fragment_vi_en" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.cndd.mydictionary.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_your_words"
        android:name="com.cndd.mydictionary.ui.yourWords.YourWordsFragment"
        android:label="@string/menu_your_words"
        tools:layout="@layout/fragment_your_words" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.cndd.mydictionary.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.cndd.mydictionary.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
</navigation>